# StoryForge-IDE

./: .gitignore  AI_CONTEXT.md  CLAUDE.md  DEVELOPMENT_PROGRESS.md  README.md  STORY_ARCHITECTURE.md  package-lock.json  package.json  svelte.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Blog-app/: package-lock.json  routes.js
src-tauri/Blog-app-2/: package.json  routes.js
src-tauri/Blogapp-2/: routes.js
src-tauri/src/: main.rs
src-tauri/url shortener/: routes.js
src/lib/: api.js  stores.js
src/lib/components/: BacklogView.svelte  EditorView.svelte  FileTreeView.svelte  MonacoEditor.svelte  ProjectInitializer.svelte  Workspace.svelte
src/routes/: +page.svelte
