[package]
name = "monacog"
version = "0.0.1"
authors = [ "you" ]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "dialog-all", "shell-open" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.38.1", features = ["full"] }
fs_extra = "1.3.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
